# AgentOSAgentOS

aios/: .env.example  .gitignore  Makefile  README.en.md  README.md  pyproject.toml
aios/config/: approval-policy.json  conversation-style.json  event-store.high-throughput.json  event-store.json  event-store.low-ram.json  guard-allowlist.json  guard-learning.json  memory-backend.json  second-brain.json  story-audio.json  wiki-pipeline.json
aios/data/: mission-control.json  wiki-index.json
aios/docs/: AGENT_EVOLUTION_PLAN.md  APPROVAL_POLICY.md  ARCHITECTURE.md  BEHAVIOR_DATASET_v1.md  BEHAVIOR_RUBRIC_v1.md  BEHAVIOR_SPEC_v1.md  BENCHMARK_LATEST.md  CHANGELOG.md  CONTEXT_MEMORY_ARCHITECTURE.md  CONTINUAL_LEARNING_7DAY_BLUEPRINT.md  DEMO_SCRIPT.md  DEMO_SCRIPT_v0.1.5.md  HANDOFF_2026-04-05.md  KNOWN_LIMITATIONS.md  LAUNCH_POST_EN.md  LAUNCH_POST_LONG_EN.md  LAUNCH_POST_LONG_VN.md  LAUNCH_POST_SHORT_EN.md  LAUNCH_POST_SHORT_VN.md  LAUNCH_POST_VN.md  LAUNCH_POST_v0.1.5_EN.md  LAUNCH_POST_v0.1.5_VN.md  OBSIDIAN_SECOND_BRAIN_REFERENCES.md  PERSONA_RULES.md  PHASE1_PLAN.md  PUBLISH_CHECK.md  RAG_PIPELINE_v1.md  RELEASE_CHECKLIST.md  RELEASE_COMMANDS.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RISK_LEVELS.md  SKILL_MATRIX.md  SMALL_TEAM_WORKPLAN_v1.md
aios/policies/: brand-voice.md  compliance.md
aios/scripts/: benchmark.py  benchmark_report.py  check_memory_benchmark.py  merge_allowlist.py  prune_event_store.py
aios/skills/: email_followup.md  followup_after_training.md  (+2 more)
(+50 files in other folders)
