[project]
name = "aios-core"
version = "0.1.0"
description = "AIOS phase-1 runtime skeleton (event-first)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aios-core = "aios_core.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
