[project]
name = "aios-core"
version = "0.1.0"
description = "AIOS phase-1 runtime skeleton (event-first)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
memory = [
  "langchain-community>=0.4.0",
  "langchain-huggingface>=0.3.1",
  "sentence-transformers>=5.0.0",
  "faiss-cpu>=1.12.0",
]

[project.scripts]
aios-core = "aios_core.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
